--- a/index.html
+++ b/index.html
@@ -22,7 +22,75 @@
 "b1":"lib/images/Electric.png","b2":"lib/images/Fighting.png","b3":"lib/images/Bug.png","b4":"lib/images/Poison.png","b5":"lib/images/Ground.png","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Ice.png","g2":"lib/images/Water.png","g3":"","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"天蠍","bu11":"lib/images/p473.png","bu12":"象牙豬","bu13":"lib/images/Ice.png","bu14":"細雪","bu15":"lib/images/Ice.png","bu16":"雪崩","bu21":"lib/images/p461.png","bu22":"瑪狃拉","bu23":"lib/images/Ice.png","bu24":"冰礫","bu25":"lib/images/Ice.png","bu26":"雪崩","bu31":"lib/images/p471.png","bu32":"冰伊布","bu33":"lib/images/Ice.png","bu34":"冰息","bu35":"lib/images/Ice.png","bu36":"雪崩"
 },
 {
+"pic":"lib/images/p286.png",[
+{
+"pic":"lib/images/p99.png",
+"ty0":"lib/images/mwater.png",
+"ty1":"",
+"ncp":"CP 1540 - 1616",
+"w0":"lib/images/wrain.png",
+"w1":"",
+"hcp":"CP 1925 - 2020",
+"sh":"",
+"b1":"lib/images/Steel.png","b2":"lib/images/Water.png","b3":"lib/images/Ice.png","b4":"lib/images/Fire.png","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Grass.png","g2":"lib/images/Electric.png","g3":"","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"巨鉗蟹","bu11":"lib/images/p644.png","bu12":"捷克羅姆","bu13":"lib/images/Electric.png","bu14":"充電光束","bu15":"lib/images/Electric.png","bu16":"瘋狂伏特","bu21":"lib/images/p386a.png","bu22":"代歐奇希斯","bu23":"lib/images/Psychic.png","bu24":"意念頭錘","bu25":"lib/images/Electric.png","bu26":"電磁炮","bu31":"lib/images/p386a.png","bu32":"代歐奇希斯","bu33":"lib/images/Poison.png","bu34":"毒擊","bu35":"lib/images/Electric.png","bu36":"電磁炮"
+},
+{
+"pic":"lib/images/p105.png",
+"ty0":"lib/images/mground.png",
+"ty1":"",
+"ncp":"CP 988 - 1048",
+"w0":"lib/images/wsun.png",
+"w1":"",
+"hcp":"CP 1235 - 1311",
+"sh":"",
+"b1":"lib/images/Rock.png","b2":"lib/images/Poison.png","b3":"lib/images/Electric.png","b4":"","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Grass.png","g2":"lib/images/Ice.png","g3":"lib/images/Water.png","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"嘎啦嘎啦","bu11":"lib/images/p99.png","bu12":"巨鉗蟹","bu13":"lib/images/Water.png","bu14":"泡沫","bu15":"lib/images/Water.png","bu16":"蟹鉗錘","bu21":"lib/images/p382.png","bu22":"蓋歐卡","bu23":"lib/images/Water.png","bu24":"攀瀑","bu25":"lib/images/Water.png","bu26":"水炮","bu31":"lib/images/p407.png","bu32":"羅絲雷朵","bu33":"lib/images/Grass.png","bu34":"飛葉快刀","bu35":"lib/images/Grass.png","bu36":"日光束"
+},
+{
+"pic":"lib/images/p207.png",
+"ty0":"lib/images/mground.png",
+"ty1":"lib/images/mflying.png",
+"ncp":"CP 1000 - 1061",
+"w0":"lib/images/wsun.png",
+"w1":"lib/images/wwindy.png",
+"hcp":"CP 1250 - 1326",
+"sh":"lib/images/sh1.png",
+"b1":"lib/images/Electric.png","b2":"lib/images/Fighting.png","b3":"lib/images/Bug.png","b4":"lib/images/Poison.png","b5":"lib/images/Ground.png","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Ice.png","g2":"lib/images/Water.png","g3":"","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"天蠍","bu11":"lib/images/p473.png","bu12":"象牙豬","bu13":"lib/images/Ice.png","bu14":"細雪","bu15":"lib/images/Ice.png","bu16":"雪崩","bu21":"lib/images/p461.png","bu22":"瑪狃拉","bu23":"lib/images/Ice.png","bu24":"冰礫","bu25":"lib/images/Ice.png","bu26":"雪崩","bu31":"lib/images/p471.png","bu32":"冰伊布","bu33":"lib/images/Ice.png","bu34":"冰息","bu35":"lib/images/Ice.png","bu36":"雪崩"
+},
+{
 "pic":"lib/images/p286.png",
+"ty0":"lib/images/mgrass.png",
+"ty1":"lib/images/mfighting.png",
+"ncp":"CP 1427 - 1502",
+"w0":"lib/images/wsun.png",
+"w1":"lib/images/wcloudy.png",
+"hcp":"CP 1785 - 1877",
+"sh":"",
+"b1":"lib/images/Rock.png","b2":"lib/images/Water.png","b3":"lib/images/Grass.png","b4":"lib/images/Electric.png","b5":"lib/images/Ground.png","b6":"lib/images/Dark.png","b7":"","b8":"","b9":"","g1":"lib/images/Flying.png","g2":"lib/images/Fairy.png","g3":"lib/images/Psychic.png","g4":"lib/images/Ice.png","g5":"lib/images/Fire.png","g6":"lib/images/Poison.png","g7":"","g8":"","g9":"","n":"斗笠菇","bu11":"lib/images/p146.png","bu12":"火焰鳥","bu13":"lib/images/Flying.png","bu14":"翅膀攻擊","bu15":"lib/images/Flying.png","bu16":"神鳥猛擊","bu21":"lib/images/p430.png","bu22":"烏鴉頭頭","bu23":"lib/images/Flying.png","bu24":"啄","bu25":"lib/images/Flying.png","bu26":"神鳥猛擊","bu31":"lib/images/p384.png","bu32":"烈空坐","bu33":"lib/images/Flying.png","bu34":"空氣斬","bu35":"lib/images/Flying.png","bu36":"燕返"
+},
+{
+"pic":"lib/images/p303.png",
+"ty0":"lib/images/msteel.png",
+"ty1":"lib/images/mfairy.png",
+"ncp":"CP 877 - 934",
+"w0":"lib/images/wsnow.png",
+"w1":"lib/images/wcloudy.png",
+"hcp":"CP 1096 - 1167",
+"sh":"lib/images/sh1.png",
+"b1":"lib/images/Poison.png","b2":"lib/images/Dark.png","b3":"lib/images/Ice.png","b4":"lib/images/Psychic.png","b5":"lib/images/Normal.png","b6":"lib/images/Grass.png","b7":"lib/images/Rock.png","b8":"lib/images/Flying.png","b9":"lib/images/Fairy.png","b10":"lib/images/Bug.png","b11":"lib/images/Dragon.png","g1":"lib/images/Fire.png","g2":"lib/images/Ground.png","g3":"","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"大嘴娃","bu11":"lib/images/p643.png","bu12":"萊希拉姆","bu13":"lib/images/Fire.png","bu14":"火焰牙","bu15":"lib/images/Fire.png","bu16":"過熱","bu21":"lib/images/p609.png","bu22":"水晶燈火靈","bu23":"lib/images/Fire.png","bu24":"火焰旋渦","bu25":"lib/images/Fire.png","bu26":"過熱","bu31":"lib/images/p637.png","bu32":"火神蛾","bu33":"lib/images/Fire.png","bu34":"火焰旋渦","bu35":"lib/images/Fire.png","bu36":"過熱"
+},
+{
+"pic":"lib/images/p394.png",
+"ty0":"lib/images/mwater.png",
+"ty1":"",
+"ncp":"CP 914 - 972",
+"w0":"lib/images/wrain.png",
+"w1":"",
+"hcp":"CP 1142 - 1215",
+"sh":"",
+"b1":"lib/images/Steel.png","b2":"lib/images/Water.png","b3":"lib/images/Ice.png","b4":"lib/images/Fire.png","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Grass.png","g2":"lib/images/Electric.png","g3":"","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"波皇子","bu11":"lib/images/p644.png","bu12":"捷克羅姆","bu13":"lib/images/Electric.png","bu14":"充電光束","bu15":"lib/images/Electric.png","bu16":"瘋狂伏特","bu21":"lib/images/p386a.png","bu22":"代歐奇希斯","bu23":"lib/images/Psychic.png","bu24":"意念頭錘","bu25":"lib/images/Electric.png","bu26":"電磁炮","bu31":"lib/images/p386a.png","bu32":"代歐奇希斯","bu33":"lib/images/Poison.png","bu34":"毒擊","bu35":"lib/images/Electric.png","bu36":"電磁炮"
+}
+]
+
 "ty0":"lib/images/mgrass.png",
 "ty1":"lib/images/mfighting.png",
 "ncp":"CP 1427 - 1502",
