--- a/index.html
+++ b/index.html
@@ -1,17 +1,6 @@
 [
 {
-"pic":"lib/images/p82.png",
-"ty0":"lib/images/melectric.png",
-"ty1":"lib/images/msteel.png",
-"ncp":"CP 1348 - 1420",
-"w0":"lib/images/wrain.png",
-"w1":"lib/images/wsnow.png",
-"hcp":"CP 1686 - 1775",
-"sh":"",
-"b1":"lib/images/Dragon.png","b2":"lib/images/Ice.png","b3":"lib/images/Psychic.png","b4":"lib/images/Electric.png","b5":"lib/images/Normal.png","b6":"lib/images/Grass.png","b7":"lib/images/Bug.png","b8":"lib/images/Rock.png","b9":"lib/images/Fairy.png","b10":"lib/images/Steel.png","b11":"lib/images/Poison.png","b12":"lib/images/Flying.png","g1":"lib/images/Ground.png","g2":"lib/images/Fire.png","g3":"lib/images/Fighting.png","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"三合一磁怪","bu11":"lib/images/p645.png","bu12":"土地雲","bu13":"lib/images/Ground.png","bu14":"泥巴射擊","bu15":"lib/images/Ground.png","bu16":"大地之力","bu21":"lib/images/p645.png","bu22":"土地雲","bu23":"lib/images/Ground.png","bu24":"泥巴射擊","bu25":"lib/images/Ground.png","bu26":"大地之力","bu31":"lib/images/p383.png","bu32":"固拉多","bu33":"lib/images/Ground.png","bu34":"泥巴射擊","bu35":"lib/images/Ground.png","bu36":"地震"
-},
-{
-"pic":"lib/images/p103.png",
+"pic":"lib/images/p103al.png",
 "ty0":"lib/images/mgrass.png",
 "ty1":"lib/images/mdragon.png",
 "ncp":"CP 1643 - 1722",
@@ -22,26 +11,26 @@
 "b1":"lib/images/Ground.png","b2":"lib/images/Water.png","b3":"lib/images/Grass.png","b4":"lib/images/Electric.png","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Ice.png","g2":"lib/images/Fairy.png","g3":"lib/images/Flying.png","g4":"lib/images/Poison.png","g5":"lib/images/Dragon.png","g6":"lib/images/Bug.png","g7":"","g8":"","g9":"","n":"椰蛋樹","bu11":"lib/images/p646.png","bu12":"酋雷姆","bu13":"lib/images/Dragon.png","bu14":"龍尾","bu15":"lib/images/Ice.png","bu16":"暴風雪","bu21":"lib/images/p473.png","bu22":"象牙豬","bu23":"lib/images/Ice.png","bu24":"細雪","bu25":"lib/images/Ice.png","bu26":"雪崩","bu31":"lib/images/p461.png","bu32":"瑪狃拉","bu33":"lib/images/Ice.png","bu34":"冰礫","bu35":"lib/images/Ice.png","bu36":"雪崩"
 },
 {
-"pic":"lib/images/p125.png",
-"ty0":"lib/images/melectric.png",
+"pic":"lib/images/p127.png",
+"ty0":"lib/images/mbug.png",
 "ty1":"",
-"ncp":"CP 1265 - 1333",
+"ncp":"CP 1613 - 1690",
 "w0":"lib/images/wrain.png",
 "w1":"",
-"hcp":"CP 1582 - 1667",
-"sh":"",
-"b1":"lib/images/Steel.png","b2":"lib/images/Electric.png","b3":"lib/images/Flying.png","b4":"","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Ground.png","g2":"","g3":"","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"電擊獸","bu11":"lib/images/p645.png","bu12":"土地雲","bu13":"lib/images/Ground.png","bu14":"泥巴射擊","bu15":"lib/images/Ground.png","bu16":"大地之力","bu21":"lib/images/p645.png","bu22":"土地雲","bu23":"lib/images/Ground.png","bu24":"泥巴射擊","bu25":"lib/images/Ground.png","bu26":"大地之力","bu31":"lib/images/p383.png","bu32":"固拉多","bu33":"lib/images/Ground.png","bu34":"泥巴射擊","bu35":"lib/images/Ground.png","bu36":"地震"
+"hcp":"CP 2016 - 2113",
+"sh":"lib/images/sh1.png",
+"b1":"lib/images/Fighting.png","b2":"lib/images/Grass.png","b3":"lib/images/Ground.png","b4":"","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Fire.png","g2":"lib/images/Flying.png","g3":"lib/images/Rock.png","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"凱羅斯","bu11":"lib/images/p643.png","bu12":"萊希拉姆","bu13":"lib/images/Fire.png","bu14":"火焰牙","bu15":"lib/images/Fire.png","bu16":"過熱","bu21":"lib/images/p609.png","bu22":"水晶燈火靈","bu23":"lib/images/Fire.png","bu24":"火焰旋渦","bu25":"lib/images/Fire.png","bu26":"過熱","bu31":"lib/images/p637.png","bu32":"火神蛾","bu33":"lib/images/Fire.png","bu34":"火焰旋渦","bu35":"lib/images/Fire.png","bu36":"過熱"
 },
 {
-"pic":"lib/images/p215.png",
-"ty0":"lib/images/mdark.png",
-"ty1":"lib/images/mice.png",
-"ncp":"CP 1107 - 1172",
+"pic":"lib/images/p200.png",
+"ty0":"lib/images/mghost.png",
+"ty1":"",
+"ncp":"CP 1039 - 1100",
 "w0":"lib/images/wfoggy.png",
-"w1":"lib/images/wsnow.png",
-"hcp":"CP 1384 - 1465",
+"w1":"",
+"hcp":"CP 1298 - 1376",
 "sh":"lib/images/sh1.png",
-"b1":"lib/images/Ghost.png","b2":"lib/images/Ice.png","b3":"lib/images/Dark.png","b4":"lib/images/Psychic.png","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Fighting.png","g2":"lib/images/Fairy.png","g3":"lib/images/Bug.png","g4":"lib/images/Steel.png","g5":"lib/images/Fire.png","g6":"lib/images/Rock.png","g7":"","g8":"","g9":"","n":"狃拉","bu11":"lib/images/p534.png","bu12":"修建老匠","bu13":"lib/images/Fighting.png","bu14":"雙倍奉還","bu15":"lib/images/Fighting.png","bu16":"爆裂拳","bu21":"lib/images/p286.png","bu22":"斗笠菇","bu23":"lib/images/Fighting.png","bu24":"雙倍奉還","bu25":"lib/images/Fighting.png","bu26":"爆裂拳","bu31":"lib/images/p68.png","bu32":"怪力","bu33":"lib/images/Fighting.png","bu34":"雙倍奉還","bu35":"lib/images/Fighting.png","bu36":"爆裂拳"
+"b1":"lib/images/Bug.png","b2":"lib/images/Poison.png","b3":"lib/images/Fighting.png","b4":"lib/images/Normal.png","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Dark.png","g2":"lib/images/Ghost.png","g3":"","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"夢妖","bu11":"lib/images/p94.png","bu12":"耿鬼","bu13":"lib/images/Ghost.png","bu14":"舌舔","bu15":"lib/images/Ghost.png","bu16":"暗影球","bu21":"lib/images/p94.png","bu22":"耿鬼","bu23":"lib/images/Ghost.png","bu24":"暗影爪","bu25":"lib/images/Ghost.png","bu26":"暗影球","bu31":"lib/images/p609.png","bu32":"水晶燈火靈","bu33":"lib/images/Ghost.png","bu34":"禍不單行","bu35":"lib/images/Ghost.png","bu36":"暗影球"
 },
 {
 "pic":"lib/images/p303.png",
@@ -55,14 +44,14 @@
 "b1":"lib/images/Poison.png","b2":"lib/images/Dark.png","b3":"lib/images/Ice.png","b4":"lib/images/Psychic.png","b5":"lib/images/Normal.png","b6":"lib/images/Grass.png","b7":"lib/images/Rock.png","b8":"lib/images/Flying.png","b9":"lib/images/Fairy.png","b10":"lib/images/Bug.png","b11":"lib/images/Dragon.png","g1":"lib/images/Fire.png","g2":"lib/images/Ground.png","g3":"","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"大嘴娃","bu11":"lib/images/p643.png","bu12":"萊希拉姆","bu13":"lib/images/Fire.png","bu14":"火焰牙","bu15":"lib/images/Fire.png","bu16":"過熱","bu21":"lib/images/p609.png","bu22":"水晶燈火靈","bu23":"lib/images/Fire.png","bu24":"火焰旋渦","bu25":"lib/images/Fire.png","bu26":"過熱","bu31":"lib/images/p637.png","bu32":"火神蛾","bu33":"lib/images/Fire.png","bu34":"火焰旋渦","bu35":"lib/images/Fire.png","bu36":"過熱"
 },
 {
-"pic":"lib/images/p310.png",
-"ty0":"lib/images/melectric.png",
+"pic":"lib/images/p510.png",
+"ty0":"lib/images/mdark.png",
 "ty1":"",
-"ncp":"CP 1267 - 1337",
-"w0":"lib/images/wrain.png",
+"ncp":"CP 993 - 1055",
+"w0":"lib/images/wfoggy.png",
 "w1":"",
-"hcp":"CP 1585 - 1672",
+"hcp":"CP 1241 - 1318",
 "sh":"",
-"b1":"lib/images/Steel.png","b2":"lib/images/Electric.png","b3":"lib/images/Flying.png","b4":"","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Ground.png","g2":"","g3":"","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"雷電獸","bu11":"lib/images/p645.png","bu12":"土地雲","bu13":"lib/images/Ground.png","bu14":"泥巴射擊","bu15":"lib/images/Ground.png","bu16":"大地之力","bu21":"lib/images/p645.png","bu22":"土地雲","bu23":"lib/images/Ground.png","bu24":"泥巴射擊","bu25":"lib/images/Ground.png","bu26":"大地之力","bu31":"lib/images/p383.png","bu32":"固拉多","bu33":"lib/images/Ground.png","bu34":"泥巴射擊","bu35":"lib/images/Ground.png","bu36":"地震"
+"b1":"lib/images/Ghost.png","b2":"lib/images/Dark.png","b3":"lib/images/Psychic.png","b4":"","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Fairy.png","g2":"lib/images/Fighting.png","g3":"lib/images/Bug.png","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"酷豹","bu11":"lib/images/p534.png","bu12":"修建老匠","bu13":"lib/images/Fighting.png","bu14":"雙倍奉還","bu15":"lib/images/Fighting.png","bu16":"爆裂拳","bu21":"lib/images/p286.png","bu22":"斗笠菇","bu23":"lib/images/Fighting.png","bu24":"雙倍奉還","bu25":"lib/images/Fighting.png","bu26":"爆裂拳","bu31":"lib/images/p68.png","bu32":"怪力","bu33":"lib/images/Fighting.png","bu34":"雙倍奉還","bu35":"lib/images/Fighting.png","bu36":"爆裂拳"
 }
 ]
