--- a/index.html
+++ b/index.html
@@ -1,16 +1,5 @@
 [
 {
-"pic":"lib/images/p75al.png",
-"ty0":"lib/images/mrock.png",
-"ty1":"lib/images/melectric.png",
-"ncp":"CP 1023 - 1084",
-"w0":"lib/images/wclsu.png",
-"w1":"lib/images/wrain.png",
-"hcp":"CP 1278 - 1355",
-"sh":"",
-"b1":"lib/images/Normal.png","b2":"lib/images/Electric.png","b3":"lib/images/Poison.png","b4":"lib/images/Fire.png","b5":"lib/images/Flying.png","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Ground.png","g2":"lib/images/Fighting.png","g3":"lib/images/Water.png","g4":"lib/images/Grass.png","g5":"","g6":"","g7":"","g8":"","g9":"","n":"隆隆石","bu11":"lib/images/p645.png","bu12":"土地雲","bu13":"lib/images/Ground.png","bu14":"泥巴射擊","bu15":"lib/images/Ground.png","bu16":"大地之力","bu21":"lib/images/p645.png","bu22":"土地雲","bu23":"lib/images/Ground.png","bu24":"泥巴射擊","bu25":"lib/images/Ground.png","bu26":"大地之力","bu31":"lib/images/p383.png","bu32":"固拉多","bu33":"lib/images/Ground.png","bu34":"泥巴射擊","bu35":"lib/images/Ground.png","bu36":"地震"
-},
-{
 "pic":"lib/images/p103al.png",
 "ty0":"lib/images/mgrass.png",
 "ty1":"lib/images/mdragon.png",
@@ -33,6 +22,28 @@
 "b1":"lib/images/Ghost.png","b2":"lib/images/Ice.png","b3":"lib/images/Dark.png","b4":"lib/images/Psychic.png","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Fighting.png","g2":"lib/images/Fairy.png","g3":"lib/images/Bug.png","g4":"lib/images/Steel.png","g5":"lib/images/Fire.png","g6":"lib/images/Rock.png","g7":"","g8":"","g9":"","n":"狃拉","bu11":"lib/images/p534.png","bu12":"修建老匠","bu13":"lib/images/Fighting.png","bu14":"雙倍奉還","bu15":"lib/images/Fighting.png","bu16":"爆裂拳","bu21":"lib/images/p286.png","bu22":"斗笠菇","bu23":"lib/images/Fighting.png","bu24":"雙倍奉還","bu25":"lib/images/Fighting.png","bu26":"爆裂拳","bu31":"lib/images/p68.png","bu32":"怪力","bu33":"lib/images/Fighting.png","bu34":"雙倍奉還","bu35":"lib/images/Fighting.png","bu36":"爆裂拳"
 },
 {
+"pic":"lib/images/p262.png",
+"ty0":"lib/images/mdark.png",
+"ty1":"",
+"ncp":"CP 1038 - 1100",
+"w0":"lib/images/wfoggy.png",
+"w1":"",
+"hcp":"CP 1298 - 1375",
+"sh":"",
+"b1":"lib/images/Ghost.png","b2":"lib/images/Dark.png","b3":"lib/images/Psychic.png","b4":"","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Fairy.png","g2":"lib/images/Fighting.png","g3":"lib/images/Bug.png","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"大狼犬","bu11":"lib/images/p534.png","bu12":"修建老匠","bu13":"lib/images/Fighting.png","bu14":"雙倍奉還","bu15":"lib/images/Fighting.png","bu16":"爆裂拳","bu21":"lib/images/p286.png","bu22":"斗笠菇","bu23":"lib/images/Fighting.png","bu24":"雙倍奉還","bu25":"lib/images/Fighting.png","bu26":"爆裂拳","bu31":"lib/images/p68.png","bu32":"怪力","bu33":"lib/images/Fighting.png","bu34":"雙倍奉還","bu35":"lib/images/Fighting.png","bu36":"爆裂拳"
+},
+{
+"pic":"lib/images/p302.png",
+"ty0":"lib/images/mdark.png",
+"ty1":"lib/images/mghost.png",
+"ncp":"CP 789 - 843",
+"w0":"lib/images/wfoggy.png",
+"w1":"",
+"hcp":"CP 986 - 1054",
+"sh":"lib/images/sh1.png",
+"b1":"lib/images/Fighting.png","b2":"lib/images/Poison.png","b3":"lib/images/Psychic.png","b4":"lib/images/Normal.png","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Fairy.png","g2":"","g3":"","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"勾魂眼","bu11":"lib/images/p282.png","bu12":"沙奈朵(Purified)","bu13":"lib/images/Fairy.png","bu14":"撒嬌","bu15":"lib/images/Fairy.png","bu16":"魔法閃耀","bu21":"lib/images/p282.png","bu22":"沙奈朵","bu23":"lib/images/Fairy.png","bu24":"撒嬌","bu25":"lib/images/Fairy.png","bu26":"魔法閃耀","bu31":"lib/images/p282.png","bu32":"沙奈朵(Shadow)","bu33":"lib/images/Fairy.png","bu34":"撒嬌","bu35":"lib/images/Fairy.png","bu36":"魔法閃耀"
+},
+{
 "pic":"lib/images/p303.png",
 "ty0":"lib/images/msteel.png",
 "ty1":"lib/images/mfairy.png",
@@ -44,14 +55,14 @@
 "b1":"lib/images/Poison.png","b2":"lib/images/Dark.png","b3":"lib/images/Ice.png","b4":"lib/images/Psychic.png","b5":"lib/images/Normal.png","b6":"lib/images/Grass.png","b7":"lib/images/Rock.png","b8":"lib/images/Flying.png","b9":"lib/images/Fairy.png","b10":"lib/images/Bug.png","b11":"lib/images/Dragon.png","g1":"lib/images/Fire.png","g2":"lib/images/Ground.png","g3":"","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"大嘴娃","bu11":"lib/images/p643.png","bu12":"萊希拉姆","bu13":"lib/images/Fire.png","bu14":"火焰牙","bu15":"lib/images/Fire.png","bu16":"過熱","bu21":"lib/images/p609.png","bu22":"水晶燈火靈","bu23":"lib/images/Fire.png","bu24":"火焰旋渦","bu25":"lib/images/Fire.png","bu26":"過熱","bu31":"lib/images/p637.png","bu32":"火神蛾","bu33":"lib/images/Fire.png","bu34":"火焰旋渦","bu35":"lib/images/Fire.png","bu36":"過熱"
 },
 {
-"pic":"lib/images/p525.png",
-"ty0":"lib/images/mrock.png",
-"ty1":"",
-"ncp":"CP 1095 - 1159",
-"w0":"lib/images/wclsu.png",
-"w1":"",
-"hcp":"CP 1369 - 1449",
-"sh":"",
-"b1":"lib/images/Normal.png","b2":"lib/images/Poison.png","b3":"lib/images/Flying.png","b4":"lib/images/Fire.png","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Steel.png","g2":"lib/images/Ground.png","g3":"lib/images/Fighting.png","g4":"lib/images/Water.png","g5":"lib/images/Grass.png","g6":"","g7":"","g8":"","g9":"","n":"地幔岩","bu11":"lib/images/p376.png","bu12":"巨金怪","bu13":"lib/images/Steel.png","bu14":"子彈拳","bu15":"lib/images/Steel.png","bu16":"彗星拳","bu21":"lib/images/p99.png","bu22":"巨鉗蟹","bu23":"lib/images/Water.png","bu24":"泡沫","bu25":"lib/images/Water.png","bu26":"蟹鉗錘","bu31":"lib/images/p534.png","bu32":"修建老匠","bu33":"lib/images/Fighting.png","bu34":"雙倍奉還","bu35":"lib/images/Fighting.png","bu36":"爆裂拳"
+"pic":"lib/images/p318.png",
+"ty0":"lib/images/mwater.png",
+"ty1":"lib/images/mdark.png",
+"ncp":"CP 531 - 583",
+"w0":"lib/images/wrain.png",
+"w1":"lib/images/wfoggy.png",
+"hcp":"CP 664 - 729",
+"sh":"lib/images/sh1.png",
+"b1":"lib/images/Ghost.png","b2":"lib/images/Steel.png","b3":"lib/images/Water.png","b4":"lib/images/Ice.png","b5":"lib/images/Dark.png","b6":"lib/images/Fire.png","b7":"lib/images/Psychic.png","b8":"","b9":"","g1":"lib/images/Fairy.png","g2":"lib/images/Bug.png","g3":"lib/images/Electric.png","g4":"lib/images/Grass.png","g5":"lib/images/Fighting.png","g6":"","g7":"","g8":"","g9":"","n":"利牙魚","bu11":"lib/images/p644.png","bu12":"捷克羅姆","bu13":"lib/images/Electric.png","bu14":"充電光束","bu15":"lib/images/Electric.png","bu16":"瘋狂伏特","bu21":"lib/images/p386a.png","bu22":"代歐奇希斯","bu23":"lib/images/Poison.png","bu24":"毒擊","bu25":"lib/images/Electric.png","bu26":"電磁炮","bu31":"lib/images/p386.png","bu32":"代歐奇希斯","bu33":"lib/images/Electric.png","bu34":"充電光束","bu35":"lib/images/Electric.png","bu36":"十萬伏特"
 }
 ]
