--- a/index.html
+++ b/index.html
@@ -1,46 +1,57 @@
 [
 {
-"pic":"lib/images/p91.png",
-"ty0":"lib/images/mwater.png",
+"pic":"lib/images/p75al.png",
+"ty0":"lib/images/mrock.png",
+"ty1":"lib/images/melectric.png",
+"ncp":"CP 1023 - 1084",
+"w0":"lib/images/wclsu.png",
+"w1":"lib/images/wrain.png",
+"hcp":"CP 1278 - 1355",
+"sh":"",
+"b1":"lib/images/Normal.png","b2":"lib/images/Electric.png","b3":"lib/images/Poison.png","b4":"lib/images/Fire.png","b5":"lib/images/Flying.png","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Ground.png","g2":"lib/images/Fighting.png","g3":"lib/images/Water.png","g4":"lib/images/Grass.png","g5":"","g6":"","g7":"","g8":"","g9":"","n":"隆隆石","bu11":"lib/images/p645.png","bu12":"土地雲","bu13":"lib/images/Ground.png","bu14":"泥巴射擊","bu15":"lib/images/Ground.png","bu16":"大地之力","bu21":"lib/images/p645.png","bu22":"土地雲","bu23":"lib/images/Ground.png","bu24":"泥巴射擊","bu25":"lib/images/Ground.png","bu26":"大地之力","bu31":"lib/images/p383.png","bu32":"固拉多","bu33":"lib/images/Ground.png","bu34":"泥巴射擊","bu35":"lib/images/Ground.png","bu36":"地震"
+},
+{
+"pic":"lib/images/p103al.png",
+"ty0":"lib/images/mgrass.png",
+"ty1":"lib/images/mdragon.png",
+"ncp":"CP 1643 - 1722",
+"w0":"lib/images/wsun.png",
+"w1":"lib/images/wwindy.png",
+"hcp":"CP 2055 - 2153",
+"sh":"lib/images/sh1.png",
+"b1":"lib/images/Ground.png","b2":"lib/images/Water.png","b3":"lib/images/Grass.png","b4":"lib/images/Electric.png","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Ice.png","g2":"lib/images/Fairy.png","g3":"lib/images/Flying.png","g4":"lib/images/Poison.png","g5":"lib/images/Dragon.png","g6":"lib/images/Bug.png","g7":"","g8":"","g9":"","n":"椰蛋樹","bu11":"lib/images/p646.png","bu12":"酋雷姆","bu13":"lib/images/Dragon.png","bu14":"龍尾","bu15":"lib/images/Ice.png","bu16":"暴風雪","bu21":"lib/images/p473.png","bu22":"象牙豬","bu23":"lib/images/Ice.png","bu24":"細雪","bu25":"lib/images/Ice.png","bu26":"雪崩","bu31":"lib/images/p461.png","bu32":"瑪狃拉","bu33":"lib/images/Ice.png","bu34":"冰礫","bu35":"lib/images/Ice.png","bu36":"雪崩"
+},
+{
+"pic":"lib/images/p215.png",
+"ty0":"lib/images/mdark.png",
 "ty1":"lib/images/mice.png",
-"ncp":"CP 1383 - 1455",
-"w0":"lib/images/wrain.png",
-"w1":"lib/images/wsnow.png",
-"hcp":"CP 1729 - 1819",
-"sh":"",
-"b1":"lib/images/Water.png","b2":"lib/images/Ice.png","b3":"","b4":"","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Fighting.png","g2":"lib/images/Rock.png","g3":"lib/images/Electric.png","g4":"lib/images/Grass.png","g5":"","g6":"","g7":"","g8":"","g9":"","n":"刺甲貝","bu11":"lib/images/p644.png","bu12":"捷克羅姆","bu13":"lib/images/Electric.png","bu14":"充電光束","bu15":"lib/images/Electric.png","bu16":"瘋狂伏特","bu21":"lib/images/p409.png","bu22":"戰槌龍","bu23":"lib/images/Rock.png","bu24":"擊落","bu25":"lib/images/Rock.png","bu26":"岩崩","bu31":"lib/images/p386a.png","bu32":"代歐奇希斯","bu33":"lib/images/Psychic.png","bu34":"意念頭錘","bu35":"lib/images/Electric.png","bu36":"電磁炮"
-},
-{
-"pic":"lib/images/p93.png",
-"ty0":"lib/images/mghost.png",
-"ty1":"lib/images/mpoison.png",
-"ncp":"CP 1056 - 1121",
+"ncp":"CP 1107 - 1172",
 "w0":"lib/images/wfoggy.png",
-"w1":"lib/images/wcloudy.png",
-"hcp":"CP 1320 - 1402",
-"sh":"",
-"b1":"lib/images/Fairy.png","b2":"lib/images/Grass.png","b3":"lib/images/Bug.png","b4":"lib/images/Poison.png","b5":"lib/images/Normal.png","b6":"lib/images/Fighting.png","b7":"","b8":"","b9":"","g1":"lib/images/Dark.png","g2":"lib/images/Ground.png","g3":"lib/images/Ghost.png","g4":"lib/images/Psychic.png","g5":"","g6":"","g7":"","g8":"","g9":"","n":"鬼斯通","bu11":"lib/images/p150.png","bu12":"超夢","bu13":"lib/images/Psychic.png","bu14":"念力","bu15":"lib/images/Psychic.png","bu16":"精神擊破","bu21":"lib/images/p386a.png","bu22":"代歐奇希斯","bu23":"lib/images/Psychic.png","bu24":"意念頭錘","bu25":"lib/images/Dark.png","bu26":"惡之波動","bu31":"lib/images/p150.png","bu32":"超夢","bu33":"lib/images/Psychic.png","bu34":"精神利刃","bu35":"lib/images/Psychic.png","bu36":"精神擊破"
+"w1":"lib/images/wsnow.png",
+"hcp":"CP 1384 - 1465",
+"sh":"lib/images/sh1.png",
+"b1":"lib/images/Ghost.png","b2":"lib/images/Ice.png","b3":"lib/images/Dark.png","b4":"lib/images/Psychic.png","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Fighting.png","g2":"lib/images/Fairy.png","g3":"lib/images/Bug.png","g4":"lib/images/Steel.png","g5":"lib/images/Fire.png","g6":"lib/images/Rock.png","g7":"","g8":"","g9":"","n":"狃拉","bu11":"lib/images/p534.png","bu12":"修建老匠","bu13":"lib/images/Fighting.png","bu14":"雙倍奉還","bu15":"lib/images/Fighting.png","bu16":"爆裂拳","bu21":"lib/images/p286.png","bu22":"斗笠菇","bu23":"lib/images/Fighting.png","bu24":"雙倍奉還","bu25":"lib/images/Fighting.png","bu26":"爆裂拳","bu31":"lib/images/p68.png","bu32":"怪力","bu33":"lib/images/Fighting.png","bu34":"雙倍奉還","bu35":"lib/images/Fighting.png","bu36":"爆裂拳"
 },
 {
-"pic":"lib/images/p281.png",
-"ty0":"lib/images/mpsychic.png",
+"pic":"lib/images/p303.png",
+"ty0":"lib/images/msteel.png",
 "ty1":"lib/images/mfairy.png",
-"ncp":"CP 508 - 552",
-"w0":"lib/images/wwindy.png",
+"ncp":"CP 877 - 934",
+"w0":"lib/images/wsnow.png",
 "w1":"lib/images/wcloudy.png",
-"hcp":"CP 635 - 690",
-"sh":"",
-"b1":"lib/images/Psychic.png","b2":"lib/images/Fighting.png","b3":"lib/images/Dragon.png","b4":"","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Poison.png","g2":"lib/images/Ghost.png","g3":"lib/images/Steel.png","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"奇魯莉安","bu11":"lib/images/p376.png","bu12":"巨金怪","bu13":"lib/images/Steel.png","bu14":"子彈拳","bu15":"lib/images/Steel.png","bu16":"彗星拳","bu21":"lib/images/p94.png","bu22":"耿鬼","bu23":"lib/images/Ghost.png","bu24":"舌舔","bu25":"lib/images/Ghost.png","bu26":"暗影球","bu31":"lib/images/p94.png","bu32":"耿鬼","bu33":"lib/images/Ghost.png","bu34":"暗影爪","bu35":"lib/images/Ghost.png","bu36":"暗影球"
+"hcp":"CP 1096 - 1167",
+"sh":"lib/images/sh1.png",
+"b1":"lib/images/Poison.png","b2":"lib/images/Dark.png","b3":"lib/images/Ice.png","b4":"lib/images/Psychic.png","b5":"lib/images/Normal.png","b6":"lib/images/Grass.png","b7":"lib/images/Rock.png","b8":"lib/images/Flying.png","b9":"lib/images/Fairy.png","b10":"lib/images/Bug.png","b11":"lib/images/Dragon.png","g1":"lib/images/Fire.png","g2":"lib/images/Ground.png","g3":"","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"大嘴娃","bu11":"lib/images/p643.png","bu12":"萊希拉姆","bu13":"lib/images/Fire.png","bu14":"火焰牙","bu15":"lib/images/Fire.png","bu16":"過熱","bu21":"lib/images/p609.png","bu22":"水晶燈火靈","bu23":"lib/images/Fire.png","bu24":"火焰旋渦","bu25":"lib/images/Fire.png","bu26":"過熱","bu31":"lib/images/p637.png","bu32":"火神蛾","bu33":"lib/images/Fire.png","bu34":"火焰旋渦","bu35":"lib/images/Fire.png","bu36":"過熱"
 },
 {
-"pic":"lib/images/p340.png",
-"ty0":"lib/images/mwater.png",
-"ty1":"lib/images/mground.png",
-"ncp":"CP 1120 - 1186",
-"w0":"lib/images/wrain.png",
-"w1":"lib/images/wsun.png",
-"hcp":"CP 1401 - 1482",
+"pic":"lib/images/p525.png",
+"ty0":"lib/images/mrock.png",
+"ty1":"",
+"ncp":"CP 1095 - 1159",
+"w0":"lib/images/wclsu.png",
+"w1":"",
+"hcp":"CP 1369 - 1449",
 "sh":"",
-"b1":"lib/images/Electric.png","b2":"lib/images/Steel.png","b3":"lib/images/Rock.png","b4":"lib/images/Poison.png","b5":"lib/images/Fire.png","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Grass.png","g2":"","g3":"","g4":"","g5":"","g6":"","g7":"","g8":"","g9":"","n":"鯰魚王","bu11":"lib/images/p407.png","bu12":"羅絲雷朵","bu13":"lib/images/Grass.png","bu14":"飛葉快刀","bu15":"lib/images/Grass.png","bu16":"日光束","bu21":"lib/images/p407.png","bu22":"羅絲雷朵","bu23":"lib/images/Grass.png","bu24":"飛葉快刀","bu25":"lib/images/Grass.png","bu26":"打草結","bu31":"lib/images/p254.png","bu32":"蜥蜴王","bu33":"lib/images/Grass.png","bu34":"種子機關槍","bu35":"lib/images/Grass.png","bu36":"瘋狂植物"
+"b1":"lib/images/Normal.png","b2":"lib/images/Poison.png","b3":"lib/images/Flying.png","b4":"lib/images/Fire.png","b5":"","b6":"","b7":"","b8":"","b9":"","g1":"lib/images/Steel.png","g2":"lib/images/Ground.png","g3":"lib/images/Fighting.png","g4":"lib/images/Water.png","g5":"lib/images/Grass.png","g6":"","g7":"","g8":"","g9":"","n":"地幔岩","bu11":"lib/images/p376.png","bu12":"巨金怪","bu13":"lib/images/Steel.png","bu14":"子彈拳","bu15":"lib/images/Steel.png","bu16":"彗星拳","bu21":"lib/images/p99.png","bu22":"巨鉗蟹","bu23":"lib/images/Water.png","bu24":"泡沫","bu25":"lib/images/Water.png","bu26":"蟹鉗錘","bu31":"lib/images/p534.png","bu32":"修建老匠","bu33":"lib/images/Fighting.png","bu34":"雙倍奉還","bu35":"lib/images/Fighting.png","bu36":"爆裂拳"
 }
 ]
